Fix navigation spacing and borders on minimized nav

--- a/wp-content/themes/hmr-theme/assets/css/less/app.less
+++ b/wp-content/themes/hmr-theme/assets/css/less/app.less
@@ -530,9 +530,6 @@ ul.fullsize {
 	.content-info {
 		display:none; 
 	}
-	.sub-nav {
-		border:none;
-	}
 }
 
 .page-template-template-portfolio-php {
